fix: remove row gap

--- a/src/App.css
+++ b/src/App.css
@@ -1437,7 +1437,6 @@ sub {
   display: flex;
   justify-content: center;
   align-items: center;
-  row-gap: 10px;
 }
 
 .headerText {
